Added trigger for branches under bug.

--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -1,8 +1,10 @@
-name: .NET Core
+name: .NET Core CI
 
 on:
   push:
-    branches: [ master ]
+    branches:
+      - master
+      - bug/*
   pull_request:
     branches: [ master ]
   schedule:
