--- a/AbstractBuilder/AbstractBuilder.csproj
+++ b/AbstractBuilder/AbstractBuilder.csproj
@@ -1,7 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net45;netstandard2.0;netstandard2.1</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;netstandard2.1</TargetFrameworks>
+    <TargetFrameworks Condition="'$(OS)' == 'Windows_NT'">net45;netstandard2.0;netstandard2.1</TargetFrameworks>
     <Authors>Pablo Caballero</Authors>
     <Description>Friendly object builder pattern for testing in .NET</Description>
     <PackageLicenseFile>License.txt</PackageLicenseFile>
