--- a/AbstractBuilder/AbstractBuilder.csproj
+++ b/AbstractBuilder/AbstractBuilder.csproj
@@ -4,7 +4,7 @@
     <TargetFrameworks>netstandard2.0;netstandard2.1</TargetFrameworks>
     <TargetFrameworks Condition="'$(OS)' == 'Windows_NT'">net45;netstandard2.0;netstandard2.1</TargetFrameworks>
     <Authors>Pablo Caballero</Authors>
-    <Description>Friendly object builder pattern for testing in .NET</Description>
+    <Description>AbstractBuilder is a friendly object builder pattern for testing in .NET</Description>
     <PackageLicenseFile>License.txt</PackageLicenseFile>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
@@ -12,9 +12,9 @@
     <RepositoryUrl>https://github.com/deidigitalis/AbstractBuilder</RepositoryUrl>
     <RepositoryType>GIT</RepositoryType>
     <Copyright>Copyright (c) 2020 Pablo Caballero</Copyright>
-    <AssemblyVersion>1.0.0.0</AssemblyVersion>
-    <FileVersion>1.0.0.0</FileVersion>
-    <Version>1.0.0</Version>
+    <AssemblyVersion>1.1.0.0</AssemblyVersion>
+    <FileVersion>1.1.0.0</FileVersion>
+    <Version>1.1.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
