--- a/.editorconfig
+++ b/.editorconfig
@@ -61,7 +61,6 @@ dotnet_style_explicit_tuple_names = true : suggestion
 dotnet_style_null_propagation = true : suggestion
 dotnet_style_object_initializer = true : warning
 dotnet_style_prefer_auto_properties = true : warning
-dotnet_style_prefer_compound_assignment = true : suggestion
 dotnet_style_prefer_conditional_expression_over_assignment = true:suggestion
 dotnet_style_prefer_conditional_expression_over_return = true:suggestion
 dotnet_style_prefer_inferred_anonymous_type_member_names = true : suggestion
@@ -286,7 +285,14 @@ dotnet_naming_symbols.symbols_type_parameter.applicable_kinds = type_parameter
 dotnet_naming_style.style_type_parameter.capitalization = pascal_case
 dotnet_naming_style.style_type_parameter.required_prefix = T
 
+# CA2007: Consider calling ConfigureAwait on the awaited task
+dotnet_diagnostic.CA2007.severity = none
+
 # .NET Code Style Settings for TEST
+
+# CA1707: Remove the underscores from member name AbstractBuilder.Benchmarks.Test.FerrariBuilder_NoSets_BuildAsync().
+dotnet_diagnostic.CA1707.severity = suggestion
+
 [*Test*.cs]
 
 # Async methods should end with Async suffix (not for public methods, those are the test methos)
