--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -20,11 +20,9 @@ jobs:
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: 6.0.x
-    - name: Change source code folder
-      run: cd src
     - name: Install dependencies
-      run: dotnet restore
+      run: dotnet restore src/AbstractBuilder.sln
     - name: Build
-      run: dotnet build --configuration Release --no-restore
+      run: dotnet build src/AbstractBuilder.sln --configuration Release --no-restore
     - name: Test
-      run: dotnet test --no-restore --verbosity normal
+      run: dotnet test src/AbstractBuilder.sln --no-restore --verbosity normal
