--- a/src/AbstractBuilder/AbstractBuilder.csproj
+++ b/src/AbstractBuilder/AbstractBuilder.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;netstandard2.1;net5.0;net6.0</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;netstandard2.1;net5.0;net6.0;net7.0;net8.0</TargetFrameworks>
     <TargetFrameworks Condition="'$(OS)' == 'Windows_NT'">net45;net48;netstandard2.0;netstandard2.1;net5.0;net6.0;net7.0;net8.0</TargetFrameworks>
     <Authors>Pablo Caballero</Authors>
     <Description>AbstractBuilder is a friendly object builder pattern for testing in .NET</Description>
